--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,1 +1,11 @@
-
+name: "Main Call"
+on:
+  push:
+    branches:
+    - master
+jobs:
+  call1:
+    uses: lyb-rozgaar/test-workflow/.github/workflows/subcall1.yml@main
+  call2:
+    uses: lyb-rozgaar/test-workflow/.github/workflows/subcall2.yml@main
+    
