--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
 name: "Main Call Test"
 on:
-  push:
-    branches:
-    - master
+  workflow_dispatch
+#   push:
+#     branches:
+#     - master
 jobs:
   call1:
     uses: lyb-rozgaar/test-workflow/.github/workflows/subcall1.yml@main
