--- a/.github/workflows/secret-test.yml
+++ b/.github/workflows/secret-test.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: "Check Token"
         run: |
-          if (${{ secrets.TOKEN }} -eq "T3stT0k3nV4lu3"){
+          if ("${{ secrets.TOKEN }}" -eq "T3stT0k3nV4lu3"){
             echo "TOken value is correct!"
           }          
         shell: pwsh
