--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   call1:
     uses: lyb-rozgaar/test-workflow/.github/workflows/subcall1.yml@main
-    with:
+    secrets:
       token1: ${{secrets.TOKEN}}
   call2:
     needs: call1
