--- a/.github/workflows/subcall1.yml
+++ b/.github/workflows/subcall1.yml
@@ -1,9 +1,6 @@
 name: "subcall1"
 on: 
-  workflow_call:
-    secrets:
-      token1:
-        required: true
+  workflow_call
 env:
   DAY_OF_WEEK: Monday
 
