--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,8 @@ on:
 jobs:
   call1:
     uses: lyb-rozgaar/test-workflow/.github/workflows/subcall1.yml@main
-    secrets:
-      token1: "T3stT0k3nV4lu3"
+    secrets: inherit
+    
   call2:
     needs: call1
     uses: lyb-rozgaar/test-workflow/.github/workflows/subcall2.yml@main
